load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "eth",
    srcs = [
        "converters.go",
        "eth.go",
        "signer.go",
    ],
    importpath = "github.com/divergencetech/ethier/eth",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_divergencetech_go_ethereum_hdwallet//:go-ethereum-hdwallet",
        "@com_github_ethereum_go_ethereum//accounts/abi/bind",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_ethereum_go_ethereum//crypto",
        "@com_github_ethereum_go_ethereum//params",
        "@com_github_google_tink_go//prf:go_default_library",
        "@com_github_tyler_smith_go_bip39//:go-bip39",
    ],
)

go_test(
    name = "eth_test",
    srcs = ["signer_test.go"],
    deps = [
        ":eth",
        "//ethtest",
        "@com_github_ethereum_go_ethereum//accounts/abi/bind",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_ethereum_go_ethereum//core/types",
        "@com_github_google_tink_go//keyset:go_default_library",
        "@com_github_google_tink_go//prf:go_default_library",
        "@com_github_google_tink_go//tink:go_default_library",
        "@com_github_h_fam_errdiff//:go_default_library",
    ],
)
