load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "toolchains_repo",
    srcs = ["toolchains_repo.bzl"],
    visibility = ["//sol:__subpackages__"],
)

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = ["//sol:__subpackages__"],
)

bzl_library(
    name = "sol_binary",
    srcs = ["sol_binary.bzl"],
    visibility = ["//sol:__subpackages__"],
    deps = [
        "//sol:providers",
        "@aspect_rules_js//js:libs",
        "@aspect_rules_js//js:providers",
        "@bazel_skylib//lib:paths",
    ],
)

bzl_library(
    name = "sol_sources",
    srcs = ["sol_sources.bzl"],
    visibility = ["//sol:__subpackages__"],
    deps = [
        "//sol:providers",
        "@aspect_rules_js//js:libs",
        "@aspect_rules_js//js:providers",
    ],
)
