load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "srcmaptest",
    srcs = [
        "generated.go",
        "srcmaptest.go",
    ],
    importpath = "github.com/divergencetech/ethier/solcover/srcmaptest",
    visibility = ["//visibility:public"],
    deps = [
        "//solcover",
        "@com_github_ethereum_go_ethereum//:go-ethereum",
        "@com_github_ethereum_go_ethereum//accounts/abi",
        "@com_github_ethereum_go_ethereum//accounts/abi/bind",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_ethereum_go_ethereum//common/compiler",
        "@com_github_ethereum_go_ethereum//core/types",
        "@com_github_ethereum_go_ethereum//event",
    ],
)
