load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "crypto",
    srcs = ["generated.go"],
    importpath = "github.com/divergencetech/ethier/tests/crypto",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_ethereum_go_ethereum//:go-ethereum",
        "@com_github_ethereum_go_ethereum//accounts/abi",
        "@com_github_ethereum_go_ethereum//accounts/abi/bind",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_ethereum_go_ethereum//core/types",
        "@com_github_ethereum_go_ethereum//event",
    ],
)

go_test(
    name = "crypto_test",
    srcs = [
        "crypto_test.go",
        "generate_test.go",
    ],
    embed = [":crypto"],
    deps = [
        "//eth",
        "//ethtest",
        "//ethtest/revert",
        "@com_github_ethereum_go_ethereum//accounts/abi/bind",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_ethereum_go_ethereum//core/types",
        "@com_github_h_fam_errdiff//:go_default_library",
    ],
)
