load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "random",
    srcs = ["generated.go"],
    importpath = "github.com/divergencetech/ethier/tests/random",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_ethereum_go_ethereum//:go-ethereum",
        "@com_github_ethereum_go_ethereum//accounts/abi",
        "@com_github_ethereum_go_ethereum//accounts/abi/bind",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_ethereum_go_ethereum//core/types",
        "@com_github_ethereum_go_ethereum//event",
    ],
)

go_test(
    name = "random_test",
    srcs = [
        "generate_test.go",
        "nextshuffler_test.go",
        "prng_test.go",
    ],
    embed = [":random"],
    deps = [
        "//ethtest",
        "@com_github_dustin_go_humanize//:go-humanize",
        "@com_github_ethereum_go_ethereum//accounts/abi/bind",
        "@com_github_ethereum_go_ethereum//core/types",
        "@com_github_ethereum_go_ethereum//crypto",
        "@com_github_google_go_cmp//cmp",
    ],
)
