load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_test(
    name = "utils_test",
    srcs = [
        "dynamicbuffer_test.go",
        "generate_test.go",
        "ownerpausable_test.go",
    ],
    embed = [":utils"],
    deps = [
        "//ethtest",
        "@com_github_google_go_cmp//cmp",
        "@com_github_h_fam_errdiff//:go_default_library",
    ],
)

go_library(
    name = "utils",
    srcs = ["generated.go"],
    importpath = "github.com/divergencetech/ethier/tests/utils",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_ethereum_go_ethereum//:go-ethereum",
        "@com_github_ethereum_go_ethereum//accounts/abi",
        "@com_github_ethereum_go_ethereum//accounts/abi/bind",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_ethereum_go_ethereum//core/types",
        "@com_github_ethereum_go_ethereum//event",
    ],
)
