load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "finance",
    srcs = [
        "generate.go",
        "generated.go",
    ],
    importpath = "github.com/divergencetech/ethier/tests/factories/finance",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_ethereum_go_ethereum//:go-ethereum",
        "@com_github_ethereum_go_ethereum//accounts/abi",
        "@com_github_ethereum_go_ethereum//accounts/abi/bind",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_ethereum_go_ethereum//core/types",
        "@com_github_ethereum_go_ethereum//event",
    ],
)

go_test(
    name = "finance_test",
    srcs = ["paymentsplitter_test.go"],
    embed = [":finance"],
    deps = [
        "//eth",
        "//ethtest",
        "//ethtest/factorytest",
        "//ethtest/revert",
        "@com_github_ethereum_go_ethereum//accounts/abi/bind",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_ethereum_go_ethereum//core/types",
        "@com_github_ethereum_go_ethereum//crypto",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
    ],
)
